Removed unused API route
